--- a/tango_with_django/rango/templates/rango/category.html
+++ b/tango_with_django/rango/templates/rango/category.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Rango</title>
 </head>
 <body>
-$END$
+    <div>
+        { % if category %}
+            <h1>{{ category.name }}</h1>
+            {% if pages %}
+                <ul>
+                    {% for page in pages %}
+                        <li>
+                            <a href="{{page.url}}">{{ page.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>No pages currently un category</strong>
+            {% endif %}
+        {% else %}
+            The specified category does not exist!
+        {% endif %}
+    </div>
 </body>
 </html>
