--- a/tango_with_django/rango/templates/rango/index.html
+++ b/tango_with_django/rango/templates/rango/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Rango</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <script src="{% 'js/jquery.js' %}"></script>
 </head>
 <body>
     <h1>Rango thins is ...</h1>
@@ -24,6 +23,7 @@
     </div>
     <div>
         <a href="/rango/about">About Rango</a>
+        <a href="/rango/add_category/">Add a new Category</a>
         <img src="{% static 'image/rango.jpg' %}">
     </div>
 </body>
