--- a/tango_with_django/rango/templates/rango/index.html
+++ b/tango_with_django/rango/templates/rango/index.html
@@ -1,5 +1,7 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +26,7 @@
     <div>
         <a href="/rango/about">About Rango</a>
         <a href="/rango/add_category/">Add a new Category</a>
-        <img src="{% static 'image/rango.jpg' %}">
+        <img src="{% static 'images/1.PNG' %}" alt='Picture of rango'>
     </div>
 </body>
 </html>
