--- a/tango_with_django/rango/templates/rango/about.html
+++ b/tango_with_django/rango/templates/rango/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Rango About</title>
 </head>
 <body>
-$END$
+About Rango
 </body>
 </html>
