--- a/tango_with_django/rango/templates/rango/index.html
+++ b/tango_with_django/rango/templates/rango/index.html
@@ -24,8 +24,10 @@
         {% endif %}
     </div>
     <div>
-        <a href="/rango/about">About Rango</a>
-        <a href="/rango/add_category/">Add a new Category</a>
+        <a href="/rango/about">About Rango</a><br>
+        <a href="/rango/add_category/">Add a new Category</a><br>
+        <a href="/rango/register/">Register Here</a><br>
+        <a href="/rango/login/">Login</a><br>
         <img src="{% static 'images/1.PNG' %}" alt='Picture of rango'>
     </div>
 </body>
