--- a/tango_with_django/rango/templates/rango/index.html
+++ b/tango_with_django/rango/templates/rango/index.html
@@ -24,10 +24,15 @@
         {% endif %}
     </div>
     <div>
-        <a href="/rango/about">About Rango</a><br>
-        <a href="/rango/add_category/">Add a new Category</a><br>
-        <a href="/rango/register/">Register Here</a><br>
-        <a href="/rango/login/">Login</a><br>
+       {% if user.is_authenticated %}
+            <a href="/rango/restricted/">Restricted Page</a><br />
+            <a href="/rango/logout/">Logout</a><br />
+        {% else %}
+            <a href="/rango/register/">Register Here</a><br />
+            <a href="/rango/login/">Login</a><br />
+        {% endif %}
+            <a href="/rango/about/">About</a><br/>
+            <a href="/rango/add_category/">Add a New Category</a><br />
         <img src="{% static 'images/1.PNG' %}" alt='Picture of rango'>
     </div>
 </body>
