--- a/tango_with_django/rango/templates/rango/about.html
+++ b/tango_with_django/rango/templates/rango/about.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango About</title>
-</head>
-<body>
-About Rango
-</body>
-</html>
+{% extends "rango/base.html" %}
+
+{% load static %}
+
+{% block title %}About{% endblock %}
+
+{% block body_block %}
+<div class="hero-unit">
+    <h1>About Rango</h1>
+    This is <strong>Rango's about page</strong>.<br/>
+
+    You've visited the site on <strong>{{ visit_count }} occasion(s).</strong><br/>
+
+    Here's a picture of Rango!<br/>
+    <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+</div>
+{% endblock %}
