--- a/tango_with_django/rango/templates/rango/add_category.html
+++ b/tango_with_django/rango/templates/rango/add_category.html
@@ -1,26 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    <h1>
-        Add a Category
-    </h1>
-    <div>
-        <form id="category_form" method="post" action="/rango/add_category/">
+{% extends "rango/base.html" %}
+
+{% block title %}Add a New Category{% endblock %}
+
+{% block body_block %}
+<div class="hero-unit">
+    <h1>Add a Category</h1>
+    <br/>
+
+    <div class="container">
+
+        <form class="span6" id="category_form" method="post" action="/rango/add_category/">
+
             {% csrf_token %}
-            {% for hidden in from.hidden_fields %}
-                {{ hidden }}
+            {% for hidden in form.hidden_fields %}
+            {{ hidden }}
             {% endfor %}
+
             {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
+            {{ field.errors }}
+            {{ field.help_text}}<br/>
+            {{ field }}
             {% endfor %}
-            <input type="submit" name="submit" value="Create Category">
+
+            <br/>
+            <input class="btn btn-primary" type="submit" name="submit" value="Create Category"/>
+
         </form>
+
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
