--- a/tango_with_django/rango/templates/rango/about.html
+++ b/tango_with_django/rango/templates/rango/about.html
@@ -12,6 +12,6 @@
     You've visited the site on <strong>{{ visit_count }} occasion(s).</strong><br/>
 
     Here's a picture of Rango!<br/>
-    <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+    <img src="{% static "1.PNG" %}" alt="Picture of Rango" />
 </div>
 {% endblock %}
