--- a/tango_with_django/rango/templates/rango/base.html
+++ b/tango_with_django/rango/templates/rango/base.html
@@ -1,139 +1,82 @@
 <!DOCTYPE html>
-{% load static %}
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap-fluid-adj.css'%} " rel="stylesheet">
-    <link href="{% static 'css/bootstrap.min.css'%} " rel="stylesheet" media="screen">
-    <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'img/twd.ico'%}" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
     <title>Rango - {% block title %}How to Tango with Django!{% endblock %}</title>
 
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
 
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-44397330-1', 'tangowithdjango.com');
-  ga('send', 'pageview');
-</script>
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
 
-<body>
-{% block body_block %}
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="/rango/">Rango</a>
-
-            <div class="nav-collapse collapse">
-                <ul class="nav pull-right">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/rango/">Rango</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'index' %}">Home</a></li>
                     {% if user.is_authenticated %}
-                    <li class="navbar-text">Welcome, {{ user.username }}!</li>
-                    <li><a href="/rango/profile/">Profile</a></li>
-                    <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
-                        {% else %}
-
-                    <li><a href="{% url 'registration_register' %}">Register</a></li>
-                    <li><a href="{% url 'auth_login' %}">Login</a></li>
-
+                        <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+                        <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
+                        <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                    {% else %}
+                        <li><a href="{% url 'registration_register' %}">Register Here</a></li>
+                        <li><a href="{% url 'auth_login' %}">Login</a></li>
                     {% endif %}
-                </ul>
+                                <li><a href="{% url 'about' %}">About</a></li>
 
-                <ul class="nav">
-                    {% if user.is_authenticated %}
-                    <!-- <li><a href="/rango/restricted/">Restricted</a></li> -->
-                    <li><a href="/rango/add_category/">Add Category</a></li>
-                    {% endif %}
-
-                    <!--- <li><a href="/rango/search">Search</a></li> -->
-                    <li><a href="http://www.tangowithdjango.com/">TWD</a></li>
-                    <li><a href="http://www.tangowithdjango.com/book/">Book</a></li>
-                    <li><a href="/rango/about/">About</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
+              </ul>
         </div>
+      </div>
     </div>
-</div>
 
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span3">
-            <div class="well sidebar-nav">
-                <ul class="nav nav-list">
-                    <li></li>
-                    <li></li>
-                    {% block navbar %}
-                    {% endblock %}
-                </ul>
-
-		<ul class="nav nav-list">
-			<li class="nav-header">Find a Category</li>
-			<form>
-			<label></label>
-			<li><input  class="search-query span10" type="text" name="suggestion" value="" id="suggestion" /></li>
-			</form>
-		</ul>
-
-        {% if cat_list %}
-		    <div id="cats">
-			    {% include 'rango/category_list.html' with cat_list=cat_list %}
-		    </div>
-	    {% endif %}
-<!---
-    <div id="cats">
-		   {% if cat_list %}
-			<ul class="nav nav-list"><li>Category List</li></ul>
-			   {% include 'rango/category_list.html' with cat_list=cat_list %}
-		   {% endif %}
-		</div>
---->
-            </div>
-            <!--/.well -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+                {% block side_block %}{% endblock %}
 
         </div>
-        <!--/span-->
-        <div class="span9">
-
-
-
-
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+           <div>
+                {% block body_block %}{% endblock %}
+                </div>
         </div>
-        <!--/span-->
+      </div>
     </div>
-    <!--/row-->
+
+    {% load rango_extras %}
+   <div class="col-sm-3 col-md-2 sidebar">
+
+    {% block side_block %}
+    {% get_category_list category %}
+    {% endblock %}
 
 </div>
-<!--/.fluid-container-->
-
-<hr>
-
-<footer>
-    <div class="container">
-        <p>&copy; Rango: How to Tango with Django 2013</p>
-    </div>
-</footer>
-
-
-<hr/>
-
-
-<script src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/rango-ajax.js' %}"></script>
-
-{% endblock %}
-
-</body>
-</html>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
