--- a/tango_with_django/rango/templates/rango/login.html
+++ b/tango_with_django/rango/templates/rango/login.html
@@ -1,37 +1,15 @@
-{% extends "rango/base.html" %}
-
-{% block title %}Login to Rango{% endblock %}
-
 {% block body_block %}
-<div class="hero-unit">
-    <h1>Login to Rango</h1>
 
-    <div class="container">
-        <form class="form-signin span4" id="login_form" method="post" action="/rango/login/">
-            <h2 class="form-signin-heading">Please sign in</h2>
-            {% if bad_details %}
-            <p><strong>Your username and/or password were incorrect!</strong></p>
-            {% elif disabled_account %}
-            <p><strong>Your Rango account is currently disabled; we can't log you in!</strong></p>
-            {% endif %}
+<link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
 
+<form class="form-signin" role="form" method="post" action=".">
+{% csrf_token %}
 
-            {% csrf_token %}
-            Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value=""
-                             size="50"/>
-            <br/>
-            Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value=""
-                             size="50"/>
-            <br/>
+<h2 class="form-signin-heading">Please sign in</h2>
+<input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
+<input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
 
-            <button class="btn btn-primary" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
         </form>
-
-
-    </div>
-    <!-- /container -->
-
-</div>
-
 
 {% endblock %}
