--- a/tango_with_django/rango/templates/rango/about.html
+++ b/tango_with_django/rango/templates/rango/about.html
@@ -7,11 +7,21 @@
 {% block body_block %}
 <div class="hero-unit">
     <h1>About Rango</h1>
+    <div id="msg">Hello</div>
     This is <strong>Rango's about page</strong>.<br/>
 
     You've visited the site on <strong>{{ visit_count }} occasion(s).</strong><br/>
 
     Here's a picture of Rango!<br/>
     <img src="{% static "1.PNG" %}" alt="Picture of Rango" />
+
+    <button onClick="alert('You clicked the button using Javascript.');">
+       Click Me - I run Javascript
+</button>
+    <button id="about-btn"> Click Me - I'm Javascript on Speed</button>
+
+<p>This is a example</p>
+
+<p>This is another example</p>
 </div>
 {% endblock %}
