--- a/tango_with_django/rango/templates/rango/base.html
+++ b/tango_with_django/rango/templates/rango/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,6 +17,10 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="{% static "js/jquery.js" %}"></script>
+      <script src="{% static "js/rango-ajax.js" %}"></script>
+      <script src="{% static "js/rango-jquery.js" %}"></script>
     <![endif]-->
   </head>
 
@@ -72,6 +77,20 @@
     {% endblock %}
 
 </div>
+    <ul class="nav nav-list">
+        <li class="nav-header">Find a Category</li>
+        <form>
+        <label></label>
+        <li><input  class="search-query span10" type="text" name="suggestion" value="" id="suggestion" /></li>
+        </form>
+</ul>
+
+<div id="cats">
+</div>
+
+    {% if user.is_authenticated %}
+        <button data-catid="{{category.id}}" data-title="{{ result.title }}" data-url="{{ result.link }}" class="rango-add btn btn-mini btn-info" type="button">Add</button>
+{% endif %}
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
