--- a/tango_with_django/rango/templates/rango/category.html
+++ b/tango_with_django/rango/templates/rango/category.html
@@ -73,10 +73,22 @@
 		{% endif %}
 	</div>
 {% else %}
-	The specified category {{ category_name }} does not exist!</div>
+	The specified category {{ category_name }} does not exist!
 {% endif %}
 
 </div>
 
+<p>
+
+<strong id="like_count">{{ category.likes }}</strong> people like this category
+
+{% if user.is_authenticated %}
+        <button id="likes" data-catid="{{category.id}}" class="btn btn-primary" type="button">
+        <span class="glyphicon glyphicon-thumbs-up"></span>
+        Like
+        </button>
+{% endif %}
+
+</p>
 
 {% endblock %}
